@@ -10,6 +10,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix string encoding conversions on windows
 	* take torrent_handle::query_pieces into account in torrent_handle::statue()
 	* honor trackers responding with 410
 	* fixed merkle tree torrent creation bug
